--- a/src/index.css
+++ b/src/index.css
@@ -30,7 +30,7 @@ footer, header, hgroup, menu, nav, section {
 }
 body {
 	line-height: 1;
-	background: whitesmoke;
+	background: white;
 }
 ol, ul {
 	list-style: none;
