--- a/src/styles/GuestLanding/GuestLanding.css
+++ b/src/styles/GuestLanding/GuestLanding.css
@@ -1,25 +1,3 @@
-.nav-container {
-  width: 100vw;
-  height: 10vh;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: flex-start;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  background: #C8C8C8;
-  font-family: "Exo", sans-serif;
-  font-size: 40px;
-}
-
-.logo {
-  width: 8vw;
-  height: 10vh;
-}
-
 .main-container {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -57,5 +35,21 @@
   width: 40vw;
   height: 25vh;
   padding: 50px;
+  background: whitesmoke;
+}
+
+.main-container button {
+  width: 70px;
+  height: 20px;
+  border-radius: 7px;
+  color: white;
+  background: #000000;
+  outline: none;
+}
+
+.main-container button:hover {
+  color: #000000;
+  background: #C8C8C8;
+  text-shadow: 0 0 20px #000000;
 }
 /*# sourceMappingURL=GuestLanding.css.map */
