--- a/src/styles/Loading/Loading.scss
+++ b/src/styles/Loading/Loading.scss
@@ -1,7 +1,7 @@
 @import "../Utilities/Utilities.scss";
 
 .loading {
-    font-size: $font-size;
+    font-size: $title-size;
     color: $black;
     font-family: $web-font;
     background: $white;
