--- a/src/styles/Header/Header.css
+++ b/src/styles/Header/Header.css
@@ -10,13 +10,59 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
   background: #C8C8C8;
   font-family: "Exo", sans-serif;
   font-size: 40px;
 }
 
-.logo {
-  width: 8vw;
-  height: 10vh;
+.nav-container button {
+  width: 70px;
+  height: 20px;
+  border-radius: 7px;
+  color: white;
+  background: #000000;
+  outline: none;
+}
+
+.nav-container button:hover {
+  color: #000000;
+  background: #C8C8C8;
+  text-shadow: 0 0 20px #000000;
+}
+
+.nav-container .welcome-box {
+  width: 30vw;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  font-size: 15px;
+}
+
+.nav-container ul {
+  width: 10vw;
+  color: #000000;
+  text-decoration: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 /*# sourceMappingURL=Header.css.map */
