just mapped categories

--- a/src/styles/Header/Header.css
+++ b/src/styles/Header/Header.css
@@ -4,15 +4,15 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: flex-start;
+  -webkit-box-pack: flex-center;
+      -ms-flex-pack: flex-center;
+          justify-content: flex-center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
   -ms-flex-pack: distribute;
       justify-content: space-around;
-  background: #C8C8C8;
+  background: #8C8C8C;
   font-family: "Exo", sans-serif;
   font-size: 40px;
 }
@@ -29,34 +29,35 @@
 
 .nav-container button:hover {
   color: #000000;
-  background: #C8C8C8;
+  background: #8C8C8C;
   text-shadow: 0 0 20px #000000;
 }
 
 .nav-container .welcome-box {
-  width: 30vw;
+  width: 40vw;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: flex-start;
+  -webkit-box-pack: flex-center;
+      -ms-flex-pack: flex-center;
+          justify-content: flex-center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   font-size: 15px;
 }
 
 .nav-container ul {
-  width: 10vw;
+  width: 15vw;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: flex-start;
+  -webkit-box-pack: flex-center;
+      -ms-flex-pack: flex-center;
+          justify-content: flex-center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
