--- a/src/styles/Utilities/Utilities.scss
+++ b/src/styles/Utilities/Utilities.scss
@@ -1,6 +1,6 @@
 @mixin box-center {
     display: flex;
-    justify-content: flex-start;
+    justify-content: flex-center;
     align-items: center;
 };
 
@@ -31,6 +31,6 @@ $web-font: 'Exo', sans-serif;
 $title-size: 40px;
 $nav-size: 15px;
 $black: #000000;
-$header-gray: #C8C8C8;
+$header-gray: #8C8C8C;
 $white: white;
 $whitesmoke: whitesmoke;
