edit button in progress

--- a/src/styles/GuestLanding/GuestLanding.scss
+++ b/src/styles/GuestLanding/GuestLanding.scss
@@ -1,6 +1,6 @@
 @import "../Utilities/Utilities.scss";
 
-main {
+.main-guestlanding {
     @include login-section;
     width: 100vw;
     height: 90vh;
