--- a/src/styles/Utilities/Utilities.scss
+++ b/src/styles/Utilities/Utilities.scss
@@ -1,6 +1,6 @@
 @mixin box-center {
     display: flex;
-    justify-content: flex-center;
+    justify-content: center;
     align-items: center;
 };
 
@@ -12,10 +12,11 @@
 };
 
 @mixin login-buttons {
-    width: 85px;
+    width: 100px;
     height: 20px;
     border-radius: 7px;
     color: $white;
+    font-weight: bold;
     font-size: $nav-size;
     background: $black;
     outline: none;
@@ -23,8 +24,10 @@
 
 @mixin button-hover {
     color: $black;
+    font-weight: bold;
     background: $header-gray;
-    text-shadow: 0 0 20px $black;
+    text-shadow: 0px 0px 10px $white;
+    cursor: pointer;
 };
 
 $web-font: 'Exo', sans-serif;
