styling and profiling

--- a/src/styles/GuestLanding/GuestLanding.scss
+++ b/src/styles/GuestLanding/GuestLanding.scss
@@ -20,6 +20,10 @@
         font-weight: bolder;
         font-size: 25px;
         margin: 50px;
+        box-shadow: 0 0 10px rgba(0,0,0,0.8);
+            input::placeholder {
+                color: $ebony;
+            };
     };
     p {
         font-size: $nav-size;
@@ -43,7 +47,6 @@
 
 .new-user {
     @extend .existing-user;
-
 }
 
 
