--- a/src/styles/Loading/Loading.scss
+++ b/src/styles/Loading/Loading.scss
@@ -2,7 +2,7 @@
 
 .loading {
     font-size: $title-size;
-    color: $black;
+    color: $ebony;
     font-family: $web-font;
     background: $white;
     @include box-center;
