--- a/src/styles/Utilities/Utilities.scss
+++ b/src/styles/Utilities/Utilities.scss
@@ -18,12 +18,12 @@
     color: $white;
     font-weight: bold;
     font-size: $nav-size;
-    background: $black;
+    background: $ebony;
     outline: none;
 };
 
 @mixin button-hover {
-    color: $black;
+    color: $ebony;
     font-weight: bold;
     background: $header-gray;
     text-shadow: 0px 0px 10px $white;
@@ -33,7 +33,8 @@
 $web-font: 'Exo', sans-serif;
 $title-size: 40px;
 $nav-size: 15px;
-$black: #000000;
 $header-gray: #8C8C8C;
 $white: white;
 $whitesmoke: whitesmoke;
+$ebony: #0A0708;
+$logout: #F51720;
