--- a/src/styles/AddService/AddService.scss
+++ b/src/styles/AddService/AddService.scss
@@ -2,10 +2,59 @@
 @import "../HomePage/HomePage.scss";
 
 .section-addService {
-    @extend .main-homepage
+    @extend .main-homepage;
+    background: url("https://images.unsplash.com/photo-1496902526517-c0f2cb8fdb6a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60");
+    background-size: 100% 100%;
+    background-position: initial;
+    background-repeat: no-repeat;
 };
 
 .addService-title {
     height: 10vh;
+    margin-top: 20px;
+    margin-bottom: 10px;
     font-size: $title-size;
+    color: $whitesmoke;
+};
+
+.category {
+    width: 8vw;
+    height: 8vh;
+    color: $whitesmoke;
+    font-weight: bolder;
+    @include column-box;
+    @include box-background;
+    justify-content: space-evenly;
+        label {
+            font-size: $label-size;
+        };
+        .dropdown {
+            outline: none;
+            cursor: pointer;
+            background: $ebony;
+            color: $whitesmoke;
+            font-family: $web-font;
+        };
+};
+
+.service-description {
+    width: 15vw;
+    height: 15vh;
+    color: $ebony;
+    text-align: center;
+    font-weight: bolder;
+    margin-bottom: 120px;
+    @include column-box;
+    @include box-background;
+        label {
+            font-size: $label-size;
+        };
+            form > textarea::placeholder {
+                color: $ebony;
+                font-family: $web-font;
+            };
+                button {
+                    @include login-buttons;
+                    cursor: pointer;
+                };
 };
