--- a/src/styles/GuestLanding/GuestLanding.scss
+++ b/src/styles/GuestLanding/GuestLanding.scss
@@ -23,6 +23,7 @@
         box-shadow: 0 0 10px rgba(0,0,0,0.8);
             input::placeholder {
                 color: $ebony;
+                font-family: $web-font;
             };
     };
     p {
