--- a/src/styles/AddService/AddService.scss
+++ b/src/styles/AddService/AddService.scss
@@ -1,7 +1,7 @@
 @import "../Utilities//Utilities.scss";
 @import "../HomePage/HomePage.scss";
 
-.section-addService {
+.background-addService {
     @extend .main-homepage;
     background: url("https://images.unsplash.com/photo-1496902526517-c0f2cb8fdb6a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60");
     background-size: 100% 100%;
