--- a/src/styles/HomePage/HomePage.scss
+++ b/src/styles/HomePage/HomePage.scss
@@ -1,10 +1,9 @@
 @import "../Utilities//Utilities.scss";
 
-.background-img {
-    // width: 100vw;
-    height: 100%;
+.background-home {
+    width: 100vw;
+    height: 90vh;
     background: url("https://images.pexels.com/photos/2391/dirty-industry-stack-factory.jpg?auto=compress&cs=tinysrgb&dpr=2&w=500");
-    // background: url("https://images.unsplash.com/photo-1541969487406-1f1adf3884ab?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60");
     background-size: 100% 100%;
     background-position: initial;
     background-repeat: no-repeat;
@@ -47,7 +46,7 @@ h2:hover {
 
 #category-box {
     width: 100vw;
-    height: 100vh;
+    height: 65vh;
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
