--- a/src/styles/HomePage/HomePage.css
+++ b/src/styles/HomePage/HomePage.css
@@ -1,13 +1,50 @@
-.background-img {
+.background-home {
+  width: 100vw;
   height: 90vh;
-  background: url("https://images.unsplash.com/photo-1541969487406-1f1adf3884ab?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60");
-  background-size: 100%;
-  background-position: bottom;
+  background: url("https://images.pexels.com/photos/2391/dirty-industry-stack-factory.jpg?auto=compress&cs=tinysrgb&dpr=2&w=500");
+  background-size: 100% 100%;
+  background-position: initial;
   background-repeat: no-repeat;
 }
 
+.category-name {
+  height: 29%;
+  margin-top: 10px;
+}
+
+.category-links {
+  width: 5vw;
+  height: 5vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  border: 1px solid transparent;
+  padding: 50px;
+  color: #0A0708;
+  background: whitesmoke;
+  opacity: 0.95;
+  font-weight: bolder;
+  font-size: 25px;
+  -webkit-box-shadow: 0 0 10px rgba(0, 0, 0, 0.8);
+          box-shadow: 0 0 10px rgba(0, 0, 0, 0.8);
+}
+
+h2:hover {
+  width: 6vw;
+  height: 6vh;
+  font-size: 27px;
+  -webkit-box-shadow: 0 0 10px rgba(0, 0, 0, 0.8);
+          box-shadow: 0 0 10px rgba(0, 0, 0, 0.8);
+}
+
 .main-homepage {
-  height: 50vh;
+  height: 90vh;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -24,12 +61,15 @@
 }
 
 .service-categories {
-  height: 10vh;
+  height: 30vh;
+  margin-top: 40px;
+  margin-bottom: 10px;
   font-size: 40px;
 }
 
 #category-box {
-  width: 50vw;
+  width: 100vw;
+  height: 65vh;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -37,28 +77,8 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-}
-
-.category-links {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  border: 1px solid transparent;
-  width: 5vw;
-  height: 5vh;
-  padding: 50px;
-  color: #000000;
-  background: whitesmoke;
-  opacity: 0.8;
-  font-weight: bolder;
-  font-size: 25px;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
 }
 /*# sourceMappingURL=HomePage.css.map */
