--- a/src/styles/Loading/Loading.css
+++ b/src/styles/Loading/Loading.css
@@ -1,14 +1,14 @@
 .loading {
   font-size: 40px;
-  color: #000000;
+  color: #0A0708;
   font-family: "Exo", sans-serif;
   background: white;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: flex-start;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
