page has been styled. need to make site responsive

--- a/src/styles/Header/Header.css
+++ b/src/styles/Header/Header.css
@@ -17,7 +17,7 @@
   font-size: 40px;
 }
 
-.nav-container button {
+.nav-container .logout-button {
   width: 100px;
   height: 20px;
   border-radius: 7px;
@@ -29,7 +29,7 @@
   outline: none;
 }
 
-.nav-container button:hover, .nav-container ul button.addService-route:hover {
+.nav-container .logout-button:hover, .nav-container ul .logout-button.addService-route:hover {
   color: #0A0708;
   font-weight: bold;
   background: #8C8C8C;
@@ -48,9 +48,9 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
   font-size: 15px;
   font-weight: bolder;
 }
@@ -90,5 +90,106 @@
   outline: none;
   background: #F51720;
   text-shadow: 0px 0px 10px #8C8C8C;
+}
+
+@media (max-width: 1080px) {
+  .welcome-box, h6, ul, button {
+    width: 15vw;
+    font-size: 10px;
+  }
+  .welcome-box .logout-button, h6 .logout-button, ul .logout-button, button .logout-button {
+    width: 55px;
+    font-size: 10px;
+  }
+}
+
+@media (max-width: 780px) {
+  .welcome-box, h6, ul, button {
+    width: 12vw;
+    font-size: 9px;
+  }
+  .welcome-box .logout-button, h6 .logout-button, ul .logout-button, button .logout-button {
+    width: 40px;
+    height: 18px;
+    font-size: 7px;
+  }
+}
+
+@media (max-width: 680px) {
+  .welcome-box, h6, ul, button {
+    width: 10vw;
+    font-size: 8px;
+  }
+  .welcome-box .logout-button, h6 .logout-button, ul .logout-button, button .logout-button {
+    width: 35px;
+    height: 15px;
+    font-size: 6px;
+  }
+  .welcome-box li, h6 li, ul li, button li {
+    pointer-events: none;
+  }
+}
+
+@media (max-width: 560px) {
+  .welcome-box, h6, ul, button {
+    width: 9vw;
+    font-size: 7px;
+  }
+  .welcome-box .logout-button, h6 .logout-button, ul .logout-button, button .logout-button {
+    width: 34px;
+    height: 14px;
+    font-size: 5px;
+  }
+}
+
+@media (max-width: 500px) {
+  .welcome-box, h6, ul, button {
+    width: 8.5vw;
+    font-size: 6.5px;
+  }
+  .welcome-box .logout-button, h6 .logout-button, ul .logout-button, button .logout-button {
+    width: 33px;
+    height: 14px;
+    font-size: 5px;
+  }
+}
+
+@media (max-width: 460px) {
+  .welcome-box, h6, ul, button {
+    width: 7.5vw;
+    font-size: 5.5px;
+  }
+  .welcome-box .logout-button, h6 .logout-button, ul .logout-button, button .logout-button {
+    width: 32px;
+    height: 13px;
+    font-size: 5px;
+  }
+}
+
+@media (max-width: 420px) {
+  .nav-container h1 {
+    font-size: 30px;
+  }
+  .welcome-box, h6, ul, button {
+    width: 10px;
+    font-size: 5.5px;
+  }
+  .logout-button {
+    width: 30px;
+    height: 8px;
+    font-size: 4px;
+  }
+}
+
+@media (max-width: 385px) {
+  .welcome-box, h6, ul, button {
+    width: 6.5vw;
+    font-size: 5px;
+  }
+  .welcome-box .logout-button, h6 .logout-button, ul .logout-button, button .logout-button {
+    width: 28px;
+    height: 12px;
+    font-size: 4px;
+  }
 }
 /*# sourceMappingURL=Header.css.map */
