--- a/src/styles/AddService/AddService.css
+++ b/src/styles/AddService/AddService.css
@@ -83,6 +83,7 @@ h2:hover {
 }
 
 .background-addService {
+  font-family: "Exo", sans-serif;
   background: url("https://images.unsplash.com/photo-1496902526517-c0f2cb8fdb6a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60");
   background-size: 100% 100%;
   background-position: initial;
