--- a/src/styles/GuestLanding/GuestLanding.css
+++ b/src/styles/GuestLanding/GuestLanding.css
@@ -1,23 +1,109 @@
-main {
+.main-guestLanding {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
+  -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+      -ms-flex-direction: row;
+          flex-direction: row;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
   width: 100vw;
-  height: 80vh;
+  height: 90vh;
+  font-family: "Exo", sans-serif;
+  background: url("https://images.unsplash.com/photo-1562237553-36ad661d6f2c?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60");
+  background-size: 100% 100%;
+  background-position: initial;
+  background-repeat: no-repeat;
+}
+
+.main-guestLanding .form-box {
+  width: 40vw;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  align-items: center;
+}
+
+.main-guestLanding form {
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  border: 1px solid transparent;
+  width: 20vw;
+  height: 40vh;
+  padding: 50px;
+  background: whitesmoke;
+  opacity: 0.95;
+  font-weight: bolder;
+  font-size: 22px;
+  -webkit-box-shadow: 0 0 10px rgba(0, 0, 0, 0.8);
+          box-shadow: 0 0 10px rgba(0, 0, 0, 0.8);
+}
+
+.main-guestLanding form input::-webkit-input-placeholder {
+  color: #0A0708;
   font-family: "Exo", sans-serif;
 }
 
-main form {
+.main-guestLanding form input:-ms-input-placeholder {
+  color: #0A0708;
+  font-family: "Exo", sans-serif;
+}
+
+.main-guestLanding form input::-ms-input-placeholder {
+  color: #0A0708;
+  font-family: "Exo", sans-serif;
+}
+
+.main-guestLanding form input::placeholder {
+  color: #0A0708;
+  font-family: "Exo", sans-serif;
+}
+
+.main-guestLanding p {
+  font-size: 15px;
+  text-align: center;
+}
+
+.main-guestLanding button {
+  width: 100px;
+  height: 20px;
+  border-radius: 7px;
+  color: white;
+  font-weight: bold;
+  font-size: 15px;
+  font-family: "Exo", sans-serif;
+  background: #0A0708;
+  outline: none;
+}
+
+.main-guestLanding button:hover {
+  color: #0A0708;
+  font-weight: bold;
+  background: #8C8C8C;
+  text-shadow: 0px 0px 10px white;
+  cursor: pointer;
+}
+
+.existing-user, .new-user {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -25,31 +111,28 @@ main form {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  border: 1px solid #000000;
-  width: 40vw;
-  height: 25vh;
-  padding: 50px;
-  background: whitesmoke;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
-main button {
-  width: 70px;
-  height: 20px;
-  border-radius: 7px;
-  color: white;
-  background: #000000;
-  outline: none;
+@media only screen and (max-width: 1080px) {
+  .main-guestLanding, h4, p, label {
+    font-size: 15px;
+  }
 }
 
-main button:hover {
-  color: #000000;
-  background: #C8C8C8;
-  text-shadow: 0 0 20px #000000;
+@media only screen and (max-width: 780px) {
+  .main-guestLanding, h4, p, label {
+    font-size: 12px;
+  }
+  .main-guestLanding form button, h4 form button, p form button, label form button {
+    width: 85px;
+    height: 18px;
+    font-size: 13px;
+  }
 }
 /*# sourceMappingURL=GuestLanding.css.map */
