--- a/src/styles/Header/Header.css
+++ b/src/styles/Header/Header.css
@@ -92,7 +92,7 @@
   text-shadow: 0px 0px 10px #8C8C8C;
 }
 
-@media (max-width: 1080px) {
+@media only screen and (max-width: 1080px) {
   .welcome-box, h6, ul, button {
     width: 15vw;
     font-size: 10px;
@@ -103,7 +103,7 @@
   }
 }
 
-@media (max-width: 780px) {
+@media only screen and (max-width: 780px) {
   .welcome-box, h6, ul, button {
     width: 12vw;
     font-size: 9px;
@@ -113,9 +113,12 @@
     height: 18px;
     font-size: 7px;
   }
+  .welcome-box li, h6 li, ul li, button li {
+    pointer-events: none;
+  }
 }
 
-@media (max-width: 680px) {
+@media only screen and (max-width: 680px) {
   .welcome-box, h6, ul, button {
     width: 10vw;
     font-size: 8px;
@@ -125,12 +128,9 @@
     height: 15px;
     font-size: 6px;
   }
-  .welcome-box li, h6 li, ul li, button li {
-    pointer-events: none;
-  }
 }
 
-@media (max-width: 560px) {
+@media only screen and (max-width: 560px) {
   .welcome-box, h6, ul, button {
     width: 9vw;
     font-size: 7px;
@@ -142,7 +142,7 @@
   }
 }
 
-@media (max-width: 500px) {
+@media only screen and (max-width: 500px) {
   .welcome-box, h6, ul, button {
     width: 8.5vw;
     font-size: 6.5px;
@@ -154,7 +154,7 @@
   }
 }
 
-@media (max-width: 460px) {
+@media only screen and (max-width: 460px) {
   .welcome-box, h6, ul, button {
     width: 7.5vw;
     font-size: 5.5px;
@@ -166,7 +166,7 @@
   }
 }
 
-@media (max-width: 420px) {
+@media only screen and (max-width: 420px) {
   .nav-container h1 {
     font-size: 30px;
   }
@@ -181,7 +181,7 @@
   }
 }
 
-@media (max-width: 385px) {
+@media only screen and (max-width: 385px) {
   .welcome-box, h6, ul, button {
     width: 6.5vw;
     font-size: 5px;
