--- a/src/styles/Header/Header.scss
+++ b/src/styles/Header/Header.scss
@@ -46,7 +46,9 @@
     };
 };
 
-@media (max-width: 1080px) {
+
+
+@media only screen and (max-width: 1080px) {
     .welcome-box, h6, ul, button {
         width: 15vw;
         font-size: 10px;
@@ -57,7 +59,7 @@
     };
 };
 
-@media (max-width: 780px) {
+@media only screen and (max-width: 780px) {
     .welcome-box, h6, ul, button {
         width: 12vw;
         font-size: 9px;
@@ -66,10 +68,13 @@
             height: 18px;
             font-size: 7px;
         };
+        li {
+            pointer-events: none;
+        };
     };
 };
 
-@media (max-width: 680px) {
+@media only screen and (max-width: 680px) {
     .welcome-box, h6, ul, button {
         width: 10vw;
         font-size: 8px;
@@ -78,13 +83,10 @@
             height: 15px;
             font-size: 6px;
         };
-        li {
-            pointer-events: none;
-        };
     };
 };
 
-@media (max-width: 560px) {
+@media only screen and (max-width: 560px) {
     .welcome-box, h6, ul, button {
         width: 9vw;
         font-size: 7px;
@@ -96,7 +98,7 @@
     };
 };
 
-@media (max-width: 500px) {
+@media only screen and (max-width: 500px) {
     .welcome-box, h6, ul, button {
         width: 8.5vw;
         font-size: 6.5px;
@@ -108,7 +110,7 @@
     };
 };
 
-@media (max-width: 460px) {
+@media only screen and (max-width: 460px) {
     .welcome-box, h6, ul, button {
         width: 7.5vw;
         font-size: 5.5px;
@@ -120,7 +122,7 @@
     };
 };
 
-@media (max-width: 420px) {
+@media only screen and (max-width: 420px) {
     .nav-container h1 {
         font-size: 30px;
     };
@@ -135,7 +137,7 @@
     };
 };
 
-@media (max-width: 385px) {
+@media only screen and (max-width: 385px) {
     .welcome-box, h6, ul, button {
         width: 6.5vw;
         font-size: 5px;
