--- a/src/styles/Header/Header.scss
+++ b/src/styles/Header/Header.scss
@@ -48,7 +48,7 @@
 
 
 
-@media only screen and (max-width: 1080px) {
+@media screen and (max-width: 1080px) {
     .welcome-box, h6, ul, button {
         width: 15vw;
         font-size: 10px;
@@ -59,7 +59,7 @@
     };
 };
 
-@media only screen and (max-width: 780px) {
+@media screen and (max-width: 780px) {
     .welcome-box, h6, ul, button {
         width: 12vw;
         font-size: 9px;
@@ -74,7 +74,7 @@
     };
 };
 
-@media only screen and (max-width: 680px) {
+@media screen and (max-width: 680px) {
     .welcome-box, h6, ul, button {
         width: 10vw;
         font-size: 8px;
@@ -86,7 +86,7 @@
     };
 };
 
-@media only screen and (max-width: 560px) {
+@media screen and (max-width: 560px) {
     .welcome-box, h6, ul, button {
         width: 9vw;
         font-size: 7px;
@@ -98,7 +98,7 @@
     };
 };
 
-@media only screen and (max-width: 500px) {
+@media screen and (max-width: 500px) {
     .welcome-box, h6, ul, button {
         width: 8.5vw;
         font-size: 6.5px;
@@ -110,7 +110,7 @@
     };
 };
 
-@media only screen and (max-width: 460px) {
+@media screen and (max-width: 460px) {
     .welcome-box, h6, ul, button {
         width: 7.5vw;
         font-size: 5.5px;
@@ -122,7 +122,7 @@
     };
 };
 
-@media only screen and (max-width: 420px) {
+@media screen and (max-width: 420px) {
     .nav-container h1 {
         font-size: 30px;
     };
@@ -137,7 +137,7 @@
     };
 };
 
-@media only screen and (max-width: 385px) {
+@media screen and (max-width: 385px) {
     .welcome-box, h6, ul, button {
         width: 6.5vw;
         font-size: 5px;
