--- a/src/styles/AddService/AddService.scss
+++ b/src/styles/AddService/AddService.scss
@@ -19,9 +19,10 @@
 };
 
 .category {
-    width: 8vw;
-    height: 8vh;
+    width: 10vw;
+    height: 10vh;
     color: $whitesmoke;
+    text-align: center;
     font-weight: bolder;
     @include column-box;
     @include box-background;
@@ -39,8 +40,8 @@
 };
 
 .service-description {
-    width: 15vw;
-    height: 15vh;
+    width: 20vw;
+    height: 20vh;
     color: $ebony;
     text-align: center;
     font-weight: bolder;
@@ -58,4 +59,33 @@
                     @include login-buttons;
                     cursor: pointer;
                 };
+};
+
+
+@media screen and (max-width: 800px) {
+    .service-description textarea {
+        resize: horizontal; max-width: 215px;
+    };
+};
+
+@media screen and (max-width: 600px) {
+    .category, .category-title {
+        width: 30vw;
+        height: 10vh;
+        font-size: 30px;
+    };
+    .service-description, service-description-title {
+        width: 40vw;
+        height: 20vh;
+        font-size: 30px;
+    };
+    .service-description textarea {
+        resize: horizontal; max-width: 200px;
+    };
+};
+
+@media screen and (max-width: 420px) {
+    .background-addService h1 {
+        font-size: 30px;
+    };
 };
