--- a/src/styles/HomePage/HomePage.css
+++ b/src/styles/HomePage/HomePage.css
@@ -1,6 +1,4 @@
 .background-home {
-  width: 100vw;
-  height: 90vh;
   background: url("https://images.pexels.com/photos/2391/dirty-industry-stack-factory.jpg?auto=compress&cs=tinysrgb&dpr=2&w=500");
   background-size: 100% 100%;
   background-position: initial;
@@ -80,5 +78,11 @@ h2:hover {
   -webkit-box-pack: space-evenly;
       -ms-flex-pack: space-evenly;
           justify-content: space-evenly;
+}
+
+@media screen and (max-width: 420px) {
+  #homepage-title {
+    font-size: 30px;
+  }
 }
 /*# sourceMappingURL=HomePage.css.map */
