--- a/src/styles/Service/Service.css
+++ b/src/styles/Service/Service.css
@@ -1,5 +1,4 @@
 .background-services {
-  height: 100%;
   background: url("https://images.unsplash.com/photo-1489997645632-af2cfd1359f6?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60");
   background-size: 100% 100%;
   background-position: initial;
@@ -24,9 +23,9 @@
   font-family: "Exo", sans-serif;
 }
 
-.main-services .services-title {
+.main-services .services-title h1 {
   height: 10vh;
-  margin-top: 40px;
+  margin-top: 80px;
   margin-bottom: 10px;
   font-size: 40px;
 }
